# almanah

./: .gitignore  .vala-format  AUTHORS  README.md  almanah.dev.json  almanah.json  io.github.dimmus.almanah.dev.json  io.github.dimmus.almanah.json  meson.build
.github/workflows/: ci.yml  flatpak.yml  release.yml
buildstream/: almanah.bst  project.conf
data/: almanah.flatpak.json  io.github.dimmus.almanah.desktop.in  io.github.dimmus.almanah.gschema.xml  io.github.dimmus.almanah.metainfo.xml.in  io.github.dimmus.almanah.service.in  meson.build
data/icons/: meson.build
doc/: almanah-doc.toml  build.md  debug.md  index.md  meson.build  todo.md  usage.md
po/: POTFILES.in  almanah.pot  ar.po  az.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  lv.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  (+3 more)
repo/: summary  summary.idx
repo/refs/heads/app/org.gnome.Almanah/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/org.gnome.Almanah.Debug/x86_64/: master
repo/refs/heads/runtime/org.gnome.Almanah.Locale/x86_64/: master
repo/summaries/: 12499f86fc5fb09f05015327952fe5548cad9818024770d60bfcc0b610b95ffc-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  24a970a9759f4d4dc85bfe6484a8811ed943488ffb879dac2b219a8a29a0e033-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  27873f6511f9e881475e9ff6b1cdd6a9ec433caaddd0f762acad935aa20eaec3-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  5ebc17553d76de3f7d4dd9e3f467cff8abf9622431ec4a679ec018623c636bf4-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  7f0a3b00a40615dc44da327dcbc02bb96d501076d387d494145569fcf790ca00-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  848f1253de9ff11e0a0f4dcdc910171f8479e9b655ba7efab1c3bdc7c66e58ac-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  944e723c2037adb643cadba1a5749106ab3c26cd01df49e58d0f64ddf14a661d-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta  9c56ee750beae8da09d06018db3b72bf53913f72df6d1ee9a7d8d5548ccd01cf-6d8324392b035fd1afdc43fc504b75f7d5408c8bce3098b2fb95b086bc1b2e5a.delta
src/: almanah.gresource.xml  meson.build
src/css/: almanah.css
src/ui/: calendar-button.blp  date-entry-dialog.blp  import-export-dialog.blp  import-results-dialog.blp  main-window.blp  preferences-dialog.blp  search-dialog.blp  uri-entry-dialog.blp
src/vala/: config.vala.in  meson.build
src/vala/app/: application.vala  main-window.vala  main.vala
src/vala/model/: entry.vala  evolution-events.vala  import-export-operations.vala  storage-manager.vala
src/vala/tests/: entry-test.vala  evolution-events-test.vala  import-export-operations-test.vala  storage-manager-test.vala  widgets-test.vala
src/vala/ui/: date-entry-dialog.vala  import-export-dialog.vala  preferences-dialog.vala  search-dialog.vala  uri-entry-dialog.vala
src/vala/widgets/: calendar-button.vala  entry-tags-area.vala  hyperlink-tag.vala  tag-entry.vala  tag.vala
