install_data(
  '256x256' / 'org.gnome.Almanah.svg',
  install_dir: icondir / 'scalable' / 'apps',
  rename: 'org.gnome.Almanah.svg',
)

install_data(
  'scalable' / 'org.gnome.Almanah-tags-symbolic.svg',
  install_dir: icondir / 'scalable' / 'actions',
)

install_data(
  'scalable' / 'org.gnome.Almanah-symbolic.svg',
  install_dir: icondir / 'scalable' / 'apps',
)
