install_data(
  '256x256' / 'io.github.dimmus.almanah.svg',
  install_dir: icondir / 'scalable' / 'apps',
  rename: 'io.github.dimmus.almanah.svg',
)

install_data(
  'scalable' / 'io.github.dimmus.almanah-tags-symbolic.svg',
  install_dir: icondir / 'scalable' / 'actions',
)

install_data(
  'scalable' / 'io.github.dimmus.almanah-symbolic.svg',
  install_dir: icondir / 'scalable' / 'apps',
)
